--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "author": "Kyle Winter",
   "license": "ISC",
   "dependencies": {
+    "compression": "^1.7.4",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "debug": "^4.1.1",
